<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pomoc"
    tools:context=".Pomoc" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="28dp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/pomoc1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="19dp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/pomoc2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/pomoc3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/pomoc4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView5"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/pomoc5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView6"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/pomoc6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView7"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/pomoc7" />

    <TextView
        android:id="@+id/textView1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="@android:color/white"
        android:text="@string/powitanie1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>